--- a/bower.json
+++ b/bower.json
@@ -20,9 +20,6 @@
     "tests"
   ],
   "dependencies": {
-    "materialize": "~0.97.7",
-    "vue": "^1.0.26",
-    "vue-router": "^0.7.13",
-    "vue-resource": "^0.9.3"
+    "materialize": "~0.97.7"
   }
 }
