--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "postinstall": "bower-requirejs -c /app/"
+    "watch": "watchify -t vueify app/index.js -o app/bundle.js --debug"
   },
   "repository": {
     "type": "git",
@@ -33,6 +33,13 @@
     "hapi": "^14.2.0",
     "inert": "^4.0.1",
     "main-bower-files": "^2.13.1",
-    "vinyl-source-stream": "^1.1.0"
+    "materialize": "^1.0.0",
+    "stringify": "^5.1.0",
+    "vinyl-source-stream": "^1.1.0",
+    "vue": "^1.0.26",
+    "vue-resource": "^0.9.3",
+    "vue-router": "^0.7.13",
+    "vueify": "^8.7.0",
+    "watchify": "^3.7.0"
   }
 }
