--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "watch": "watchify -t vueify app/index.js -o app/bundle.js --debug",
+    "watch": "watchify -t vueify -t debowerify app/index.js -o app/bundle.js --debug",
     "postinstall": "bower install"
   },
   "repository": {
@@ -33,8 +33,8 @@
     "hapi": "^14.2.0",
     "inert": "^4.0.1",
     "main-bower-files": "^2.13.1",
-    "materialize": "^1.0.0",
     "stringify": "^5.1.0",
+    "sweetalert": "^1.1.3",
     "vinyl-source-stream": "^1.1.0",
     "vue": "^1.0.26",
     "vue-resource": "^0.9.3",
