--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "hapi": "^14.2.0",
     "inert": "^4.0.1",
     "main-bower-files": "^2.13.1",
+    "materialize": "^1.0.0",
     "stringify": "^5.1.0",
     "sweetalert": "^1.1.3",
     "vinyl-source-stream": "^1.1.0",
     "vue": "^1.0.26",
+    "vue-hot-reload-api": "^2.0.6",
     "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13",
     "vueify": "^8.7.0",
