--- a/package.json
+++ b/package.json
@@ -32,16 +32,22 @@
     "gulp-load-plugins": "^1.2.4",
     "hapi": "^14.2.0",
     "inert": "^4.0.1",
+    "lodash": "^3.10.1",
     "main-bower-files": "^2.13.1",
     "materialize": "^1.0.0",
+    "q": "^1.4.1",
     "stringify": "^5.1.0",
     "sweetalert": "^1.1.3",
     "vinyl-source-stream": "^1.1.0",
     "vue": "^1.0.26",
+    "vue-google-maps": "^0.1.20",
     "vue-hot-reload-api": "^2.0.6",
     "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13",
     "vueify": "^8.7.0",
     "watchify": "^3.7.0"
+  },
+  "devDependencies": {
+    "vue-google-maps": "^0.1.20"
   }
 }
