--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vue": "^1.0.26",
     "vue-google-maps": "^0.1.20",
     "vue-hot-reload-api": "^2.0.6",
+    "vue-leaflet": "^0.1.0",
     "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13",
     "vueify": "^8.7.0",
