--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "vue": "^1.0.26",
     "vue-google-maps": "^0.1.20",
     "vue-hot-reload-api": "^2.0.6",
+    "vue-infinite-loading": "^1.1.0",
     "vue-leaflet": "^0.1.0",
+    "vue-paginate": "^2.1.2",
     "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13",
     "vueify": "^8.7.0",
