--- a/package.json
+++ b/package.json
@@ -44,13 +44,14 @@
     "vue-hot-reload-api": "^2.0.6",
     "vue-infinite-loading": "^1.1.0",
     "vue-leaflet": "^0.1.0",
-    "vue-paginate": "^2.1.2",
     "vue-resource": "^0.9.3",
     "vue-router": "^0.7.13",
     "vueify": "^8.7.0",
     "watchify": "^3.7.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
     "vue-google-maps": "^0.1.20"
   }
 }
