--- a/bower.json
+++ b/bower.json
@@ -22,5 +22,8 @@
   "dependencies": {
     "materialize": "~0.97.7",
     "cloudinary-jquery-file-upload": "~2.1.3"
+  },
+  "resolutions": {
+    "jquery": ">=2.1.1"
   }
 }
