--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,8 @@
   ],
   "dependencies": {
     "materialize": "~0.97.7",
-    "cloudinary-jquery-file-upload": "~2.1.3"
+    "cloudinary-jquery-file-upload": "~2.1.3",
+    "awesomplete": "https://github.com/LeaVerou/awesomplete.git#gh-pages"
   },
   "resolutions": {
     "jquery": ">=2.1.1"
