--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "gulp-load-plugins": "^1.2.4",
     "hapi": "^14.2.0",
     "inert": "^4.0.1",
+    "jquery-ui": "^1.12.1",
     "jspdf": "^1.3.2",
-    "lodash": "^3.10.1",
+    "lodash": "^4.15.0",
     "main-bower-files": "^2.13.1",
     "materialize": "^1.0.0",
     "q": "^1.4.1",
