--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "inert": "^4.0.1",
     "jquery-ui": "^1.12.1",
     "jspdf": "^1.3.2",
+    "jspdf-autotable": "^2.1.0",
     "lodash": "^4.15.0",
     "main-bower-files": "^2.13.1",
     "materialize": "^1.0.0",
