--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,7 @@
     "tests"
   ],
   "dependencies": {
-    "materialize": "~0.97.7",
+    "materialize": "0.97.7",
     "cloudinary-jquery-file-upload": "~2.1.3",
     "awesomplete": "https://github.com/LeaVerou/awesomplete.git#gh-pages"
   },
