--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "jspdf": "^1.3.2",
     "lodash": "^4.15.0",
     "main-bower-files": "^2.13.1",
-    "materialize": "^1.0.0",
+    "materialize": "1.0.0",
     "q": "^1.4.1",
     "stringify": "^5.1.0",
     "sweetalert": "^1.1.3",
